--- a/cowsay/dockerfile
+++ b/cowsay/dockerfile
@@ -1,7 +1,4 @@
-From debian
+FROM debian
 
-MAINTAINER Martin Na <okring200@gmail.com>
 RUN apt-get update && apt-get install -y cowsay fortune
-COPY entrypoint.sh /
-
-ENTRYPOINT ["/entrypoint.sh"]
+ENTRYPOINT ["/usr/games/cowsay"]
